# RAG_with_OpenLIT

./: .gitignore  README.md  pyproject.toml
LLM_Agent_with_docker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: app.py  chunking.py  openlit_evaluation.py  request.http  requirements.txt  retriver.py  utils.py
app/app/data/vector_store/: chroma.sqlite3
data/vector_store/: chroma.sqlite3
