[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM-Agent-with-docker"
version = "0.1.0"
description = "This project implements self-correcting code agent that uses unit test"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "fastapi==0.112.1",
    "langchain==0.2.14",
    "langchain-chroma==0.1.2",
    "langchain-core==0.2.29",
    "langchain-openai==0.1.20",
    "openlit==1.18.2",
    "pydantic==2.8.2",
    "PyPDF2==3.0.1",
    "python-dotenv==1.0.1",
    "ragas==0.1.14",
    "uvicorn==0.30.6",
]


[project.optional-dependencies]
dev = ["black", "flake8"]
test = ["pytest", "pytest-cov"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
